name:                AdventOfCode2017
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/guibou/AdventOfCode2016#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2015-2016 Guillaume Bouchard
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       Utils
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       megaparsec,
                       cryptohash,
                       base16-bytestring,
                       bytestring,
                       containers,
                       parallel,
                       vector,
                       file-embed,
                       unordered-containers,
                       template-haskell,
                       memoize,
                       split,
                       here,
                       protolude,
                       text
  default-extensions: TupleSections
                    , DeriveAnyClass
                    , StandaloneDeriving
                    , DeriveGeneric
                    , OverloadedStrings
                    , BangPatterns
                    , ViewPatterns
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , BinaryLiterals
                    , TemplateHaskell
                    , PartialTypeSignatures
                    , QuasiQuotes
                    , GeneralizedNewtypeDeriving
                    , DerivingStrategies
                    , NoImplicitPrelude
                    , FlexibleContexts
                    , LambdaCase
  ghc-options: -Wall -Wno-missing-signatures -fwarn-incomplete-uni-patterns -Wno-missing-home-modules

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/guibou/AdventOfCode2017
